--- a/style/style.css
+++ b/style/style.css
@@ -1025,16 +1025,85 @@ textarea {
         padding: 10px;
 }
 
-
-    .imagenIndex img{
-        width: 350px;
-        height: auto;
-    }
-
     .imagenIndex img {
         width: 350px;
         height: 200px;
 }
 
+/* historia */
+
+.titulo2 {
+
+    width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 30px;
+}
+
+.titulo2 img {
+    width: 350px;
+    height: 200px;
+}
+
+.contenedor {
+    display: flex;
+}
+
+.biografia {
+    background-color: white;
+    font-family: 'Dosis', sans-serif;
+    text-align: left;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    color: black;
+}
+
+.biografia2 {
+    text-indent: 40px;
+}
+
+p {
+
+    font-family: 'Dosis', sans-serif;
+    font-style: normal;
+    font-weight: bolder;
+    text-align: left;
+    font-size: 10px;
+    line-height: 25px;
+    letter-spacing: 1px;
+    list-style-type: none;
+    margin: 1px;
+}
+
+h2 {
+
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    font-weight: bolder;
+}
+
+.imagenBiografia {
+    width: 300px;
+    height: auto;
+    margin: auto;
+    padding: 25px;
+    border-radius: 50px;
+}
+
+.imagenBiografia2 {
+    width: 300px;
+    height: auto;
+    margin: auto;
+    padding: 25px;
+    justify-items: center;
+    border-radius: 50px;
+}
 
 }
