--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ body {
     background-color: white;
     margin: 20px;
     padding: 10px;
+    overflow-x: hidden;
 }
 
 header {
@@ -690,6 +691,12 @@ textarea {
 
 @media screen and (max-width: 576px) {
 
+body {
+    background-color: white;
+    margin: 20px;
+    padding: 10px;
+    overflow-x: hidden;
+}
 
 
 /* Index */
@@ -945,6 +952,13 @@ textarea {
 }
 
 @media screen and (max-width: 360px) {
+
+    body {
+    background-color: white;
+    margin: 20px;
+    padding: 10px;
+    overflow-x: hidden;
+}
 
     .titulo1 {
         background-color: white;
