--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,11 @@
 
 body {
     background-color: white;
+    text-align: center;
+    font-family:'Ubuntu', sans-serif;
     margin: 20px;
     padding: 10px;
+    min-height: 100vh;
     overflow-x: hidden;
 }
 
@@ -48,8 +51,8 @@ ul li {
 
 .titulo1 {
     background-color: white;
-    width: 700px;
-    height: 200px;
+    width: 360px;
+    height: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -58,8 +61,8 @@ ul li {
 }
 
 .titulo1 img {
-    width: 600px;
-    height: 175px;
+    width: 300px;
+    height: 100px;
 }
 
 h1 {
@@ -67,7 +70,7 @@ h1 {
     font-style: normal;
     font-weight: bolder;
     text-align: center;
-    font-size: 18px;
+    font-size: 10px;
     line-height: 20px;
     letter-spacing: 1px;
     list-style-type: none;
@@ -80,7 +83,7 @@ h1 {
     font-style: normal;
     font-weight: bolder;
     text-align: center;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 20px;
     letter-spacing: 1px;
     list-style-type: none;
@@ -89,8 +92,8 @@ h1 {
 }
 
 .imagenIndex {
-    width: 1000px;
-    height: 500px;
+    width: 330px;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,8 +101,8 @@ h1 {
 }
 
 .imagenIndex img {
-    width: 750px;
-    height: 500px;
+    width: 300px;
+    height: 200px;
     border-radius: 30px;
 }
 
@@ -117,10 +120,9 @@ footer {
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: bolder;
-    font-size: 15px;
+    font-size: 9px;
     text-align: center;
     margin: auto;
-    padding: 20px;
     text-decoration-line: none;
 }
 
@@ -134,9 +136,8 @@ footer {
 }
 
 .logo {
-    width: 150px;
-    height: 75px;
-    padding: 10px;
+    width: 100px;
+    height: 50px;
 }
 
 .logo:hover {
@@ -146,30 +147,30 @@ footer {
 }
 
 .instagram {
-    margin: auto;
-    width: 90px;
-    height: 90px;
+    margin: 5px;
+    width: 70px;
+    height: 60px;
     padding: 15px 20px;
 }
 
 .twitter {
-    margin: auto;
-    width: 90px;
-    height: 90px;
+    margin: 5px;
+    width: 70px;
+    height: 60px;
     padding: 15px 20px;
 }
 
 .youtube {
-    margin: auto;
-    width: 90px;
-    height: 90px;
-    padding: 15px 20px;
+    margin: 5px;
+    width: 60px;
+    height: 60px;
+    padding: 15px;
 }
 
 .redesSociales {
-    padding: 30px;
+    padding: 10px;
     margin: 10px;
-    font-size: 20px;
+    font-size: 10px;
     text-align: center;
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
@@ -692,8 +693,7 @@ textarea {
     border-radius: 50px;
 }
 
-
-@media screen and (max-width: 576px) {
+@media (min-width: 576px) {
 
 body {
     background-color: white;
@@ -959,22 +959,53 @@ nav {
     }
 }
 
-@media screen and (max-width: 360px) {
+
+@media (min-width: 992px) {
+
 
     body {
         background-color: white;
+        text-align: center;
+        font-family:'Ubuntu', sans-serif;
         margin: 20px;
         padding: 10px;
+        min-height: 100vh;
         overflow-x: hidden;
     }
-
+    
     nav {
         overflow-x: hidden;
     }
-
+    
+    header {
+        background-color: white;
+        padding: 20px;
+    }
+    
+    ul {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: right;
+        text-decoration-line: none;
+        font-size: 15px;
+        line-height: 40px;
+        letter-spacing: 5px;
+        list-style-type: none;
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+    }
+    
+    ul li {
+        display: inline-block;
+    }
+    
+    /* Index */
+    
     .titulo1 {
         background-color: white;
-        width: 300px;
+        width: 500px;
         height: 100px;
         display: flex;
         justify-content: space-around;
@@ -982,99 +1013,640 @@ nav {
         margin: auto;
         padding: 30px;
     }
-
+    
     .titulo1 img {
-        width: 300px;
-        height: 125px;
-    }
-
-    .imagenIndex {
-        width: 350px;
-        height: auto;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px;
-    }
-
-    .imagenIndex img {
-        width: 350px;
+        width: 600px;
         height: 200px;
     }
-
-    /* historia */
-
-    .titulo2 {
-
-        width: 500px;
+    
+    h1 {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 10px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        padding: 100px;
+        margin: auto;
+    }
+    
+    .bienvenido {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 20px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        padding: 100px;
+        margin: 20px;
+    }
+    
+    .imagenIndex {
+        width: 1000px;
+        height: 600px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
+    
+    .imagenIndex img {
+        width: 1000px;
+        height: 600px;
+        border-radius: 30px;
+    }
+    
+    footer {
+        font-family: 'Dosis', sans-serif;
+        font-style: italic;
+        font-size: 20px;
+        font-weight: bolder;
+        color: black;
+        text-align: center;
+        padding: 10px;
+        margin: 10px;
+    }
+    
+    .arriba {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        font-size: 16px;
+        text-align: center;
+        margin: auto;
+        text-decoration-line: none;
+        padding: 30px;
+    }
+    
+    .montesanoLogo {
+        width: 300px;
+        height: 300px;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+    
+    .logo {
+        width: 200px;
         height: 100px;
+    }
+    
+    .logo:hover {
+        transform: rotate(360deg) scale(3);
+        transition-property: all;
+        transition-duration: 500ms;
+    }
+    
+    .instagram {
+        margin: 5px;
+        width: 100px;
+        height: 80px;
+        padding: 15px 20px;
+    }
+    
+    .twitter {
+        margin: 5px;
+        width: 100px;
+        height: 80px;
+        padding: 15px 20px;
+    }
+    
+    .youtube {
+        margin: 5px;
+        width: 90px;
+        height: 90px;
+        padding: 15px;
+    }
+    
+    .redesSociales {
+        padding: 10px;
+        margin: 10px;
+        font-size: 20px;
+        text-align: center;
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+    }
+    
+    /* Biografía */
+    
+    .titulo2 {
+        background-color: white;
+        width: 600px;
+        height: 200px;
         display: flex;
         justify-content: center;
         align-items: center;
         margin: auto;
         padding: 30px;
     }
-
+    
     .titulo2 img {
-        width: 350px;
-        height: 200px;
+        width: 500px;
+        height: 150px;
     }
-
+    
     .contenedor {
+        background-color: white;
+        padding: 30px;
+        margin: 15px;
         display: flex;
     }
-
+    
+    .suTrabajo {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 20px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        padding: 30px;
+        margin: 20px;
+    }
+    
     .biografia {
         background-color: white;
+        padding: 50px;
+        margin: 20px;
         font-family: 'Dosis', sans-serif;
         text-align: left;
         font-style: normal;
         font-weight: 300;
-        font-size: 10px;
+        font-size: 16px;
         line-height: 20px;
         letter-spacing: 1px;
+        padding: 20px;
         color: black;
     }
-
+    
     .biografia2 {
         text-indent: 40px;
+        margin: 10px;
     }
-
+    
     p {
-
+        padding: auto;
+        margin: 15px;
         font-family: 'Dosis', sans-serif;
         font-style: normal;
         font-weight: bolder;
         text-align: left;
-        font-size: 10px;
+        font-size: 18px;
         line-height: 25px;
         letter-spacing: 1px;
         list-style-type: none;
         margin: 1px;
     }
-
+    
     h2 {
-
+        padding: 30px;
         text-align: center;
         font-family: 'Ubuntu', sans-serif;
         font-style: normal;
         font-weight: bolder;
     }
-
+    
     .imagenBiografia {
-        width: 300px;
-        height: auto;
+        width: 700px;
+        height: 1000px;
         margin: auto;
         padding: 25px;
         border-radius: 50px;
     }
-
+    
     .imagenBiografia2 {
-        width: 300px;
-        height: auto;
+        width: 700px;
+        height: 375px;
         margin: auto;
         padding: 25px;
         justify-items: center;
+        border-radius: 50px;
+    }
+    
+    /* Shop */
+    
+    .shop {
+        background-color: white;
+        width: 600px;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        padding: 30px;
+        align-items: flex-start;
+    }
+    
+    .shop img {
+        width: 400px;
+        height: 175px;
+        align-items: center;
+    }
+    
+    .cuadros {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        padding: 30px;
+        margin: 20px;
+    }
+    
+    .gridPadre {
+        background-color: white;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto auto auto;
+        justify-content: center;
+        grid-template-areas:
+            "cuadrouno cuadrodos cuadrotres"
+            "cuadrocuatro cuadrocinco cuadroseis"
+            "cuadrosiete cuadroocho cuadronueve";
+    }
+    
+    .cuadro1 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadrouno;
+    }
+    
+    .cuadro2 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadrodos;
+    }
+    
+    .cuadro3 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadrotres;
+    }
+    
+    .cuadro4 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadrocuatro;
+    }
+    
+    .cuadro5 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadrocinco;
+    }
+    
+    .cuadro6 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadroseis;
+    }
+    
+    .cuadro7 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadrosiete;
+    }
+    
+    .cuadro8 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadroocho;
+    }
+    
+    .cuadro9 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 25px;
+        padding: 25px;
+        border-radius: 40px;
+        grid-area: cuadronueve;
+    }
+    
+    .mercadoPago {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 12px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        display: grid;
+    }
+    
+    .medidas {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 15px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        display: grid;
+    }
+    
+    /* Celebrities */
+    
+    .celebridades {
+        background-color: white;
+        width: 600px;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        padding: 30px;
+        align-items: flex-start;
+    }
+    
+    .celebridades img {
+        width: 400px;
+        height: 200px;
+    }
+    
+    .trabajo {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        padding: 30px;
+        margin: 20px;
+    }
+    
+    .gridPadre2 {
+        background-color: white;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto auto auto auto;
+        grid-template-areas:
+            "celeuno celedos celetres"
+            "celecuatro celecinco celeseis"
+            "celesiete celeocho celenueve"
+            "celediez celeonce celedoce";
+    }
+    
+    .celebridad1 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celeuno;
+    }
+    
+    .celebridad2 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celedos;
+    }
+    
+    .celebridad3 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celetres;
+    }
+    
+    .celebridad4 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celecuatro;
+    }
+    
+    .celebridad5 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celecinco;
+    }
+    
+    .celebridad6 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celeseis;
+    }
+    
+    .celebridad7 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celesiete;
+    }
+    
+    .celebridad8 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celeocho;
+    }
+    
+    .celebridad9 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celenueve;
+    }
+    
+    .celebridad10 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celediez;
+    }
+    
+    .celebridad11 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celeonce;
+    }
+    
+    .carouselExample {
+        width: 400px;
+        height: 400px;
+    
+    }
+    
+    .celebridad12 {
+        width: 400px;
+        height: 400px;
+        display: grid;
+        margin: 20px;
+        padding: 20px;
+        border-radius: 40px;
+        grid-area: celedoce;
+    }
+    
+    .celebridadesp {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: center;
+        font-size: 20px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        display: grid;
+        text-decoration-line: none;
+        justify-content: center
+    }
+    
+    /* Contacto */
+    
+    .contacto {
+        background-color: white;
+        width: 700px;
+        height: 200px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: auto;
+        padding: 30px;
+    }
+    
+    .contacto img {
+        width: 500px;
+        height: 100px;
+        align-items: center;
+    }
+    
+    section {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: left;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        list-style-type: none;
+        padding: 30px;
+    }
+    
+    .formulario {
+        font-family: 'Ubuntu', sans-serif;
+        font-style: normal;
+        font-weight: bolder;
+        text-align: left;
+        font-size: 18px;
+        line-height: 20px;
+        letter-spacing: 1px;
+        padding: 20px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+    
+    .contactoUno {
+        padding: 10px 20px;
+        width: 500px;
+        height: 400px;
+        background-position: center;
+    }
+    
+    input {
+        width: 100%;
+        margin-bottom: 20px;
+        padding: 10px;
+        box-sizing: border-box;
+        font-size: 15px;
+    }
+    
+    textarea {
+        min-height: 100px;
+        min-width: 450px;
+        font-size: 15px;
+    }
+    
+    .boton {
+        margin: 10px;
+        padding: auto;
+        width: 300px;
+    }
+    
+    .danipintando {
+        width: 600px;
+        height: 700px;
+        margin: auto;
         border-radius: 50px;
     }
 
