--- a/style/style.css
+++ b/style/style.css
@@ -436,8 +436,8 @@ h2 {
 
 .celebridades {
     background-color: white;
-    width: 600px;
-    height: 200px;
+    width: 350px;
+    height: 150px;
     display: flex;
     justify-content: center;
     margin: auto;
@@ -446,8 +446,8 @@ h2 {
 }
 
 .celebridades img {
-    width: 400px;
-    height: 200px;
+    width: 250px;
+    height: 150px;
 }
 
 .trabajo {
@@ -455,29 +455,38 @@ h2 {
     font-style: normal;
     font-weight: bolder;
     text-align: center;
-    font-size: 18px;
+    font-size: 15px;
     line-height: 20px;
     letter-spacing: 1px;
     list-style-type: none;
-    padding: 30px;
-    margin: 20px;
+    padding: 10px;
+    margin: 5px;
 }
 
 .gridPadre2 {
     background-color: white;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    justify-content: center;
     grid-template-areas:
-        "celeuno celedos celetres"
-        "celecuatro celecinco celeseis"
-        "celesiete celeocho celenueve"
-        "celediez celeonce celedoce";
+        "celeuno"
+        "celedos"
+        "celetres"
+        "celecuatro"
+        "celecinco"
+        "celeseis"
+        "celesiete"
+        "celeocho"
+        "celenueve"
+        "celediez"
+        "celeonce"
+        "celedoce";
 }
 
 .celebridad1 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -486,8 +495,8 @@ h2 {
 }
 
 .celebridad2 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -496,8 +505,8 @@ h2 {
 }
 
 .celebridad3 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -506,8 +515,8 @@ h2 {
 }
 
 .celebridad4 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -516,8 +525,8 @@ h2 {
 }
 
 .celebridad5 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -526,8 +535,8 @@ h2 {
 }
 
 .celebridad6 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -536,8 +545,8 @@ h2 {
 }
 
 .celebridad7 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -546,8 +555,8 @@ h2 {
 }
 
 .celebridad8 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -556,8 +565,8 @@ h2 {
 }
 
 .celebridad9 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -566,8 +575,8 @@ h2 {
 }
 
 .celebridad10 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -576,8 +585,8 @@ h2 {
 }
 
 .celebridad11 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -585,15 +594,9 @@ h2 {
     grid-area: celeonce;
 }
 
-.carouselExample {
-    width: 400px;
-    height: 400px;
-
-}
-
 .celebridad12 {
-    width: 400px;
-    height: 400px;
+    width: 300px;
+    height: 300px;
     display: grid;
     margin: 20px;
     padding: 20px;
@@ -606,7 +609,7 @@ h2 {
     font-style: normal;
     font-weight: bolder;
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     line-height: 20px;
     letter-spacing: 1px;
     display: grid;
