--- a/style/style.css
+++ b/style/style.css
@@ -671,6 +671,7 @@ h2 {
 
 .mb-3 {
     display: grid;
+    justify-content: center;
     grid-area: formu;
 }
 
@@ -876,74 +877,65 @@ h2 {
         justify-items: center;
     }
 
-    .contacto {
-        background-color: white;
-        width: 300px;
-        height: 110px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin: auto;
-        padding: 30px;
-    }
+    /* Contacto */
 
-    .contacto img {
-        width: 300px;
-        height: 100px;
-        align-items: center;
-    }
-
-    section {
-        font-family: 'Ubuntu', sans-serif;
-        font-style: normal;
-        font-weight: bolder;
-        text-align: left;
-        font-size: 18px;
-        line-height: 20px;
-        letter-spacing: 1px;
-        list-style-type: none;
-        padding: 30px;
-    }
-
-    .contactoUno {
-        padding: 10px 20px;
-        width: 250px;
-        height: 300px;
-        background-position: center;
-    }
-
-    input {
-        width: 50%;
-        margin-bottom: 20px;
-        padding: 10px;
-        box-sizing: border-box;
-        font-size: 15px;
-    }
-
-    textarea {
-        min-height: 100px;
-        min-width: 450px;
-        font-size: 15px;
-    }
-
-    .boton {
-        margin: 10px;
-        padding: auto;
-        width: 20px;
-    }
-
-    .danipintando {
-        width: 300px;
-        height: 500px;
-        margin: auto;
-        border-radius: 50px;
-    }
+.contacto {
+    background-color: white;
+    width: 350px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    padding: 10px;
 }
 
+.contacto img {
+    width: 300px;
+    height: 80px;
+    align-items: center;
+}
 
-@media (min-width: 992px) {
+.ayuda {
+    font-family: 'Ubuntu', sans-serif;
+    font-style: normal;
+    font-weight: bolder;
+    text-align: center;
+    font-size: 10px;
+    line-height: 20px;
+    letter-spacing: 1px;
+    list-style-type: none;
+    padding: 10px;
+    margin: 10px;
+}
 
+.danielapintando {
+        background-color: white;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        justify-content: center;
+        grid-template-areas:
+            "pintura"
+            "formu";
+    }
 
+.danipintando {
+    width: 300px;
+    height: auto;
+    margin: 20px;
+    border-radius: 50px;
+    display: grid;
+    justify-content: center;
+    grid-area: pintura;
+}
+
+.mb-3 {
+    display: grid;
+    justify-content: center;
+    grid-area: formu;
+}
+
+@media (min-width: 992px){}
     body {
         background-color: white;
         text-align: center;
@@ -1632,6 +1624,4 @@ h2 {
         grid-area: pintura;
     }
     
-
-
 }
