--- a/style/style.css
+++ b/style/style.css
@@ -825,7 +825,8 @@ h2 {
 
     .gridPadre {
         grid-template-columns: 90vw;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto;
+        justify-items: center;
         grid-template-areas:
             "cuadrouno"
             "cuadrodos"
@@ -860,7 +861,8 @@ h2 {
 
     .gridPadre2 {
         grid-template-columns: 80vw;
-        grid-template-rows: auto auto auto;
+        grid-template-rows: auto;
+        justify-items: center;
         grid-template-areas:
             "celeuno"
             "celedos"
@@ -914,6 +916,7 @@ h2 {
         grid-template-columns: 1fr;
         grid-template-rows: auto;
         justify-content: center;
+        justify-items: center;
         grid-template-areas:
             "pintura"
             "formu";
@@ -927,6 +930,7 @@ h2 {
     display: grid;
     justify-content: center;
     grid-area: pintura;
+    justify-items: center
 }
 
 .mb-3 {
@@ -1062,7 +1066,7 @@ h2 {
         margin: auto;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
         padding: 20px;
     }
 
